# nav2-baseline

./: .gitignore  LICENSE
ROS/docker/: ROS_humble.dockerfile
ROS/docker/config/: bashrc  entrypoint.sh
ROS/docker/scripts/: run.sh
ROS/ros_ws/install/: local_setup.sh  setup.sh
ROS/ros_ws/log/: latest_build
ROS/ros_ws/nav2_benchmark_bag/: metadata.yaml  nav2_benchmark_bag_0.db3
ROS/ros_ws/src/nav2_baseline/: package.xml  setup.cfg  setup.py
ROS/ros_ws/src/nav2_rl_controller/: CMakeLists.txt  package.xml  plugins.xml
ROS/ros_ws/src/nav2_rl_controller/include/nav2_rl_controller/: rl_controller.hpp
ROS/ros_ws/src/nav2_rl_controller/src/: rl_controller.cpp
ROS/ros_ws/src/nav2_rl_controller/srv/: RLInfer.srv
ROS/ros_ws/src/ppo_training/: package.xml  setup.cfg  setup.py
ROS/ros_ws/src/ppo_training/plugins/: CMakeLists.txt
ROS/ros_ws/src/rl_infer_stub/: package.xml  setup.cfg  setup.py
ROS/ros_ws/tb_logs/PPO_1/: events.out.tfevents.1759618118.marcus.42111.0
ROS/ros_ws/tb_logs/PPO_10/: events.out.tfevents.1759673951.marcus.98442.0
ROS/ros_ws/tb_logs/PPO_11/: events.out.tfevents.1759675055.marcus.108.0
ROS/ros_ws/tb_logs/PPO_12/: events.out.tfevents.1759677713.marcus.3641.0
ROS/ros_ws/tb_logs/PPO_13/: events.out.tfevents.1759678939.marcus.7183.0
ROS/ros_ws/tb_logs/PPO_14/: events.out.tfevents.1759688181.marcus.10049.0
ROS/ros_ws/tb_logs/PPO_15/: events.out.tfevents.1759693132.marcus.15589.0
ROS/ros_ws/tb_logs/PPO_16/: events.out.tfevents.1759696014.marcus.18989.0
ROS/ros_ws/tb_logs/PPO_17/: events.out.tfevents.1759699622.marcus.4605.0
ROS/ros_ws/tb_logs/PPO_18/: events.out.tfevents.1759704407.marcus.30329.0
ROS/ros_ws/tb_logs/PPO_19/: events.out.tfevents.1759707009.marcus.34769.0
ROS/ros_ws/tb_logs/PPO_2/: events.out.tfevents.1759618601.marcus.43113.0
ROS/ros_ws/tb_logs/PPO_20/: events.out.tfevents.1759709926.marcus.48959.0
ROS/ros_ws/tb_logs/PPO_21/: events.out.tfevents.1759712204.marcus.107.0
ROS/ros_ws/tb_logs/PPO_22/: events.out.tfevents.1759714168.marcus.4621.0  events.out.tfevents.1759719694.marcus.28338.0
ROS/ros_ws/tb_logs/PPO_23/: events.out.tfevents.1759810635.marcus.12578.0  events.out.tfevents.1759878387.marcus.31668.0  events.out.tfevents.1759893254.marcus.45118.0  events.out.tfevents.1759893942.marcus.49970.0  events.out.tfevents.1759965408.marcus.9416.0  events.out.tfevents.1759965564.marcus.11903.0  events.out.tfevents.1759973803.marcus.17822.0
ROS/ros_ws/tb_logs/PPO_24/: events.out.tfevents.1759983325.marcus.25860.0  events.out.tfevents.1760000959.marcus.29142.0  events.out.tfevents.1760039250.marcus.34008.0  events.out.tfevents.1760043014.marcus.46010.0  events.out.tfevents.1760046487.marcus.108.0  events.out.tfevents.1760046633.marcus.2713.0
ROS/ros_ws/tb_logs/PPO_25/: events.out.tfevents.1760060106.marcus.27670.0
ROS/ros_ws/tb_logs/PPO_26/: events.out.tfevents.1760060356.marcus.31039.0
ROS/ros_ws/tb_logs/PPO_27/: events.out.tfevents.1760129366.marcus.74791.0
ROS2_humble_backup/docker/config/: bashrc
ROS2_humble_backup/docker/scripts/: build.sh
Rec_v0/: log.txt  rec_1.yaml  rec_10.yaml  rec_11.yaml  rec_12.yaml  rec_13.yaml  rec_14.yaml  rec_15.yaml  rec_16.yaml  rec_17.yaml  rec_18.yaml  rec_19.yaml  rec_2.yaml  rec_20.yaml  rec_21.yaml  rec_22.yaml  rec_23.yaml  rec_24.yaml  rec_25.yaml  rec_3.yaml  rec_4.yaml  rec_5.yaml  rec_6.yaml  rec_7.yaml  rec_8.yaml  rec_9.yaml
Rec_v1/: log.txt  rec_1.yaml  rec_10.yaml  rec_11.db3  rec_11.yaml  rec_12.yaml  rec_13.yaml  rec_14.yaml  rec_15.yaml  rec_16.yaml  rec_17.yaml  rec_18.yaml  rec_19.yaml  rec_2.yaml  rec_20.yaml  rec_21.db3  rec_21.yaml  rec_22.yaml  rec_23.db3  rec_23.yaml  rec_24.yaml  rec_25.db3  rec_25.yaml  rec_3.db3  rec_3.yaml  rec_4.yaml  rec_5.db3  rec_5.yaml  rec_6.yaml  rec_7.yaml  rec_8.yaml  rec_9.db3  rec_9.yaml
Rec_v2/: log.txt  rec_1.yaml  rec_2.yaml  rec_3.yaml
(+104 files in other folders)
